[package]
name = "transglass"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_Accessibility"
] }
lazy_static = "1.4"
dashmap = "5.5"
